--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.16.3",
-    "nodemailer": "^4.6.7"
+    "nodemailer": "^4.6.7",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
